# C_AnimeCompanion

./: .atomcode.md  .gitignore  CODE_AUDIT_REPORT.md  CompanionChat优化实施计划.md  CompanionChat优化建议.md  LICENSE  README.md  _add_import.py  _batch_1.py  _batch_2.py  _batch_3.py  _batch_4.py  _batch_5.py  _batch_6.py  _batch_7.py  _build_apk.txt  _build_final.txt  _check.py  _check_apk.py  _check_build.py  _check_build2.py  _check_build3.py  _check_build4.py  _check_build5.py  _check_err.py  _check_final.py  _check_java.py  _chk.bat  _chk_clean.bat  _chk_clean_out.txt  _chk_clean_out2.txt  _chk_final.txt  _chk_final2.txt  _chk_out.txt  _clean_line.py  _do_build.cmd  _dump_rced.py  _fast_check.bat  _final_fix.py  _find_java.py  (+92 more)
othergithubdemo/OpenViking-main/OpenViking-main/: .gitignore  .pr_agent.toml  CONTRIBUTING.md  CONTRIBUTING_CN.md  CONTRIBUTING_JA.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_CN.md  README_JA.md  RELEASE.md  RELEASE_CN.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.py
othergithubdemo/OpenViking-main/OpenViking-main/bot/: .coveragerc  .dockerignore  .gitignore  README.md  README_CN.md  SECURITY.md  package-lock.json  package.json
othergithubdemo/OpenViking-main/OpenViking-main/build_support/: __init__.py  versioning.py  x86_profiles.py
othergithubdemo/OpenViking-main/OpenViking-main/crates/: LICENSE
othergithubdemo/OpenViking-main/OpenViking-main/docker/: openviking-entrypoint.sh  pending_health_server.py
othergithubdemo/OpenViking-main/OpenViking-main/docs/: index.md  package-lock.json  package.json
othergithubdemo/OpenViking-main/OpenViking-main/examples/: LICENSE  ov.conf.example  ovcli.conf.example  quick_start.py  watch_resource_example.py
othergithubdemo/OpenViking-main/OpenViking-main/openviking/: __init__.py  _sdk_import.py  async_client.py  client.py  sync_client.py
othergithubdemo/OpenViking-main/OpenViking-main/openviking_cli/: doctor.py  exceptions.py  rust_cli.py  server_bootstrap.py  setup_wizard.py
othergithubdemo/OpenViking-main/OpenViking-main/src/: CMakeLists.txt  abi3_engine_backend.cpp  abi3_x86_caps.cpp
othergithubdemo/OpenViking-main/OpenViking-main/tests/: README.md  __init__.py  conftest.py  debug_trace.py  test_code_hosting_utils.py  test_config_loader.py  test_edge_cases.py  test_edge_cases_simple.py  test_link_renderer.py  test_memory_lifecycle.py  test_prompt_manager.py  test_server_config_loader.py  test_session_async_commit.py  test_session_task_tracking.py  test_task_backend_config.py  test_task_tracker.py  test_telemetry_runtime.py  test_token_estimation.py  test_upload_utils.py
othergithubdemo/OpenViking-main/OpenViking-main/web-studio/: .cta.json  .gitignore  .prettierignore  README.md  README_CN.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
othergithubdemo/ReMe-main/ReMe-main/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_ZH.md  example.env  pyproject.toml
othergithubdemo/ReMe-main/ReMe-main/reme/: __init__.py  application.py  constants.py  reme.py
othergithubdemo/Second-Me-master/Second-Me-master/: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.backend.apple  Dockerfile.backend.cuda  Dockerfile.frontend  LICENSE  Makefile  README.md  README_ja.md  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml
othergithubdemo/Second-Me-master/Second-Me-master/docs/: Custom Model Config(Ollama).md  Embedding Model Switching.md  Local Chat API.md  Public Chat API.md
othergithubdemo/Second-Me-master/Second-Me-master/integrate/: Readme.md  env.txt  requirements.txt  wechat_bot.py
othergithubdemo/Second-Me-master/Second-Me-master/lpm_frontend/: .eslintrc.js  .gitignore  .prettierrc.js  .stylelintrc.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
othergithubdemo/Second-Me-master/Second-Me-master/lpm_kernel/: app.py  package-lock.json  utils.py
othergithubdemo/Second-Me-master/Second-Me-master/mcp/: mcp_local.py  mcp_public.py
othergithubdemo/Second-Me-master/Second-Me-master/scripts/: downgrade_migration.py  migrate_add_instance_password.py  prompt_cuda.bat  prompt_cuda.sh  restart-backend.sh  restart-force.sh  restart.sh  run_migrations.py  setup.sh  start.sh  start_frontend.sh  start_local.sh  status.sh  stop.sh
othergithubdemo/memU-main/memU-main/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
othergithubdemo/memU-main/memU-main/.github/: PULL_REQUEST_TEMPLATE.md
othergithubdemo/memU-main/memU-main/docs/: architecture.md  langgraph_integration.md  sealos_use_case.md  sqlite.md
othergithubdemo/memU-main/memU-main/examples/: example_1_conversation_memory.py  example_2_skill_extraction.py  example_3_multimodal_memory.py  example_4_openrouter_memory.py  example_5_with_lazyllm_client.py  getting_started_robust.py  langgraph_demo.py  sealos_support_agent.py
othergithubdemo/memU-main/memU-main/readme/: README_en.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md
othergithubdemo/memU-main/memU-main/src/: lib.rs
othergithubdemo/memU-main/memU-main/tests/: rust_entry_test.py  test_backend_conformance.py  test_embedding.py  test_folder_memorize.py  test_inmemory.py  test_lazyllm.py  test_memory_files.py  test_memory_fs_synthesis.py  test_openrouter.py  test_postgres.py  test_postgres_migration_config.py  test_sqlite.py  test_tool_memory.py  test_vector.py  test_vlm_preprocess.py
othergithubdemo/text2mem-main/text2mem-main/: .env.example  .gitignore  LICENSE  README.md  bench-cli  environment.yml  manage.py  pyproject.toml
othergithubdemo/text2mem-main/text2mem-main/bench/: .gitignore  GUIDE.md  README.md
othergithubdemo/text2mem-main/text2mem-main/docs/: CHANGELOG.md  CONFIGURATION.md  README.md
othergithubdemo/text2mem-main/text2mem-main/examples/: README.md
othergithubdemo/text2mem-main/text2mem-main/scripts/: check_env.py  (+5 more)
(+5236 files in other folders)
